sakina-infra/manifests/sakina-prod/sakina-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sakina-7jzi-ingress
  namespace: sakina-prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: 7jzi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sakina-frontend
                port:
                  number: 80
    - host: www.7jzi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sakina-frontend
                port:
                  number: 80
    - host: api.7jzi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sakina-backend
                port:
                  number: 8080
